examples/test/testpolicy9966.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9966
  namespace: namespace404
spec:
  podSelector:
    matchLabels:
      key44: value12
      key16: value36
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key2: value15
          key15: value1
          key0: value33
      podSelector:
        matchLabels:
          key40: value7
